<resources>
    <string name="app_name">Reto3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="info">info</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="new_game">New game</string>
    <string name="android_0">Android: 0</string>
    <string name="ties_0">Ties: 0</string>
    <string name="human_0">Human: 0</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_choose">"Choose a difficulty"</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>
    <string name="quit">Quit</string>
    <string name="quit_question">Want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="by_jorge_morales">By Jorge Morales</string>
    <string name="about">Choose from one of three difficulty levels.\nDon’t let the Android beat you!</string>
    <string name="about_item_text">About</string>
</resources>